tests/invalid/UnionType_Invalid_1.whiley
type IntBool is int | bool

function f(IntBool x) -> int:
    return x
